[tool.poetry]
name = "repl-nix-google-recaptcha-bypass-with-python-selenium-"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_google_recaptcha_bypass_with_python_selenium_"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
selenium = "^4.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
